sandc/test/fixtures/astRegression/shouldSucceed/TrailingCopy.sand
pub class TrailingCopy {
    copy sand.util.IndexOf.indexOf<T>(T[], T);
    copy sand.util.IndexOf.indexOf<T>(T[+], T);
}