sandc/test/fixtures/astRegression/shouldFail/productions/angleBracketEnclosedGenericMethodFormalTypeParams/ActualTypeParams.sand
pub class ActualTypeParams {
    foo<T[]>() {
        
    }
}